# bibliography

./: bibliography.rst  pyproject-20220817043725.toml  pyproject.toml  references.bib  references.bib.bak  references.bib.sav.tmp
docs/: .buildinfo  bibliography.html  glossary.html  index.html  objects.inv
docs/_sources/: bibliography.rst.txt  index.rst.txt  slides.rst.txt
docs/_static/: documentation_options.js  references.bib
src/: bibliography.rst  conf.py
src/_static/: references.bib
